--- a/argocd/retail-app-argocd.yaml
+++ b/argocd/retail-app-argocd.yaml
@@ -18,7 +18,7 @@ spec:
 
   destination:
     server: https://kubernetes.default.svc
-    namespace: venkatesh-ns 
+    namespace: venky-ns 
 
   syncPolicy:
     automated:
